--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/prefabs/Rocket.js"></script>
+    <script src = "./src/prefabs/Rocketp2.js"></script>
     <script src = "./src/prefabs/Spaceship.js"></script>
     <script src = "./src/prefabs/Speedship.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
