Add player 2,new title screen,add timer mechanism

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style> body { background-color: beige; }</style>
 </head>
 <body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/prefabs/Rocket.js"></script>
     <script src = "./src/prefabs/Rocketp2.js"></script>
